--- a/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj.filters
+++ b/Tests/QGL_Model_Unit_Tests/QGL_Model_Unit_Tests.vcxproj.filters
@@ -36,12 +36,18 @@
     <ClCompile Include="Tests\Observer-Observable\subject_remove_tests.cpp">
       <Filter>Tests\Observer-Observable</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\Observer-Observable\observer_out_of_scope_tests.cpp">
+      <Filter>Tests\Observer-Observable</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="UnitTestApp.xaml.h" />
     <ClInclude Include="Tests\Observer-Observable\basic_observer.h">
       <Filter>Tests\Observer-Observable</Filter>
+    </ClInclude>
+    <ClInclude Include="Tests\basic_state.h">
+      <Filter>Tests</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
