Reorg timing. Tests for time_state.

--- a/QGL_Model/QGL_Model.vcxproj
+++ b/QGL_Model/QGL_Model.vcxproj
@@ -147,9 +147,10 @@
     <ClInclude Include="include\Observer-Observable\qgl_subject.h" />
     <ClInclude Include="include\qgl_icomponent.h" />
     <ClInclude Include="include\qgl_model_include.h" />
-    <ClInclude Include="include\qgl_timer.h" />
-    <ClInclude Include="include\qgl_time_state.h" />
     <ClInclude Include="include\qgl_version.h" />
+    <ClInclude Include="include\Timing\qgl_timer.h" />
+    <ClInclude Include="include\Timing\qgl_time_helpers.h" />
+    <ClInclude Include="include\Timing\qgl_time_state.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="QGLModel.h" />
     <ClInclude Include="QGL_ModelRT.h" />
