--- a/QGL_Content/QGL_Content.vcxproj
+++ b/QGL_Content/QGL_Content.vcxproj
@@ -154,10 +154,12 @@
     </Midl>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Content-Buffers\qgl_content_dictionary_metadata_buffer.h" />
+    <ClInclude Include="include\Content-Buffers\qgl_content_dict_entry_buffer.h" />
+    <ClInclude Include="include\Content-Buffers\qgl_content_file_header_buffer.h" />
+    <ClInclude Include="include\Content-Buffers\qgl_content_metadata_buffer.h" />
     <ClInclude Include="include\qgl_content_dictionary.h" />
-    <ClInclude Include="include\qgl_content_dictionary_buffer.h" />
     <ClInclude Include="include\qgl_content_file.h" />
-    <ClInclude Include="include\qgl_content_header_buffer.h" />
     <ClInclude Include="include\qgl_content_project.h" />
     <ClInclude Include="include\qgl_content_project_compiler.h" />
     <ClInclude Include="include\qgl_content_store.h" />
@@ -165,10 +167,8 @@
     <ClInclude Include="include\qgl_file_importers.h" />
     <ClInclude Include="include\qgl_iimporter.h" />
     <ClInclude Include="include\qgl_content_include.h" />
-    <ClInclude Include="include\qgl_content_info_buffer.h" />
     <ClInclude Include="include\qgl_content_item.h" />
     <ClInclude Include="include\qgl_content_types.h" />
-    <ClInclude Include="include\qgl_content_dict_entry_buffer.h" />
     <ClInclude Include="include\qgl_file_helpers.h" />
     <ClInclude Include="include\qgl_importer_string.h" />
     <ClInclude Include="include\qgl_importer_struct.h" />
@@ -189,10 +189,10 @@
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
     <ClCompile Include="qgl_content_dictionary.cpp" />
-    <ClCompile Include="qgl_content_dictionary_buffer.cpp" />
+    <ClCompile Include="qgl_content_dictionary_metadata_buffer.cpp" />
     <ClCompile Include="qgl_content_file.cpp" />
-    <ClCompile Include="qgl_content_header_buffer.cpp" />
-    <ClCompile Include="qgl_content_info_buffer.cpp" />
+    <ClCompile Include="qgl_content_file_header_buffer.cpp" />
+    <ClCompile Include="qgl_content_metadata_buffer.cpp" />
     <ClCompile Include="qgl_content_dict_entry_buffer.cpp" />
     <ClCompile Include="qgl_file_helpers.cpp" />
   </ItemGroup>
