--- a/QGL_Content/QGL_Content.vcxproj.filters
+++ b/QGL_Content/QGL_Content.vcxproj.filters
@@ -20,9 +20,6 @@
     <Filter Include="Source Files\Content Buffers">
       <UniqueIdentifier>{a33edd2d-e54f-432e-b72a-48614af954b2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Files">
-      <UniqueIdentifier>{7afd98e3-e081-45cf-b7b9-cb189cc5e2f4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Content Items">
       <UniqueIdentifier>{3dbd6721-fc42-41f4-9be0-18c2769bb094}</UniqueIdentifier>
     </Filter>
@@ -64,6 +61,9 @@
     </Filter>
     <Filter Include="Source Files\Content Project">
       <UniqueIdentifier>{5ef97647-96e1-444f-bd89-172b8d5cd2b7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Content Files">
+      <UniqueIdentifier>{7afd98e3-e081-45cf-b7b9-cb189cc5e2f4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -133,7 +133,7 @@
       <Filter>Header Files\Content Info</Filter>
     </ClInclude>
     <ClInclude Include="include\qgl_content_file.h">
-      <Filter>Header Files\Files</Filter>
+      <Filter>Header Files\Content Files</Filter>
     </ClInclude>
     <ClInclude Include="include\qgl_content_item.h">
       <Filter>Header Files\Content Items</Filter>
@@ -171,9 +171,6 @@
     <ClInclude Include="include\Content-Buffers\qgl_content_file_header_buffer.h">
       <Filter>Header Files\Content Buffers</Filter>
     </ClInclude>
-    <ClInclude Include="include\Content-Importers\qgl_file_importers.h">
-      <Filter>Header Files\Content Importers</Filter>
-    </ClInclude>
     <ClInclude Include="include\Content-Importers\qgl_iimporter.h">
       <Filter>Header Files\Content Importers</Filter>
     </ClInclude>
@@ -189,14 +186,20 @@
     <ClInclude Include="include\Content-Importers\qgl_importer_testers.h">
       <Filter>Header Files\Content Importers</Filter>
     </ClInclude>
-    <ClInclude Include="include\Content-Importers\qgl_file_loader_content_store_config.h">
-      <Filter>Header Files\Content Importers</Filter>
+    <ClInclude Include="include\Content-Files\qgl_content_file.h">
+      <Filter>Header Files\Content Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Content-Importers\qgl_file_loader_string.h">
-      <Filter>Header Files\Content Importers</Filter>
+    <ClInclude Include="include\Content-Files\qgl_file_importers.h">
+      <Filter>Header Files\Content Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Content-Importers\qgl_file_loader_wstring.h">
-      <Filter>Header Files\Content Importers</Filter>
+    <ClInclude Include="include\Content-Files\qgl_file_loader_content_store_config.h">
+      <Filter>Header Files\Content Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content-Files\qgl_file_loader_string.h">
+      <Filter>Header Files\Content Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Content-Files\qgl_file_loader_wstring.h">
+      <Filter>Header Files\Content Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
